feat: inicei etapa de documentação